install_k8s/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.org/ssl-backends: "kubernetes-dashboard"
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: "nginx"
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
    - host: master.cloud.com
      http:
        paths:
          - backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
            path: /dashboard(/|$)(.*)
            pathType: Prefix
  tls:
    - hosts:
        - master.cloud.com
      secretName: appingress-certificate
